<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="15dp"
    android:gravity="center"
    tools:context=".DescriptionActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <com.denzcoskun.imageslider.ImageSlider
                android:id="@+id/pic_mobil"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:layout_marginVertical="3dp"
                app:iss_auto_cycle="true"
                app:iss_delay="0"
                app:iss_placeholder="@drawable/placeholder"
                app:iss_error_image="@drawable/error"
                app:iss_corner_radius="5"
                app:iss_selected_dot="@drawable/default_selected_dot"
                app:iss_unselected_dot="@drawable/default_unselected_dot"
                app:iss_period="3000" />
            <ImageButton
                android:id="@+id/upload_cars"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:background="@drawable/ic_upload"
                android:visibility="gone"/>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/nama_mobil"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/merek_model"
                    android:background="@color/white"
                    android:focusableInTouchMode="false"
                    android:layout_marginVertical="3dp"/>
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/deskripsi_mobil"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Spesifikasi"
                    android:background="@color/white"
                    android:layout_marginVertical="3dp"
                    android:focusableInTouchMode="false" />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/sisa_Waktu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="3dp"
                    android:hint="Tanggal Tersedia"
                    android:background="@color/white"
                    android:focusableInTouchMode="false" />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/harga_asli"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusableInTouchMode="false"
                    android:layout_marginVertical="3dp"
                    android:background="@color/white"
                    android:inputType="number"
                    android:hint="@string/tarif_sewa"
                    android:textColor="@color/black"/>
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/parent_tglMulai"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/tglMulai"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/mulai_sewa"
                    android:textColorHint="@color/black"
                    android:background="@color/white"
                    android:textColor="@color/black"
                    android:focusable="false"/>
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/parent_jml_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/jml_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:hint="@string/lama_hari"
                    android:textColorHint="@color/black"
                    android:background="@color/white"
                    android:textColor="@color/black"/>
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>
    </ScrollView>
    <Button
        android:id="@+id/btn_checkout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Bayar"
        android:textAllCaps="false"/>

</LinearLayout>