<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CheckOutActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="5dp"
                app:cardBackgroundColor="@color/white"
                app:cardPreventCornerOverlap="true"
                app:cardUseCompatPadding="true"
                app:cardElevation="10dp"
                app:cardCornerRadius="10dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:id="@+id/ketInfo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        android:gravity="center"
                        android:padding="5dp"/>
                    <com.denzcoskun.imageslider.ImageSlider
                        android:id="@+id/petunjuk_transfer"
                        android:layout_width="match_parent"
                        android:layout_height="300dp"
                        android:layout_marginVertical="3dp"
                        app:iss_auto_cycle="true"
                        app:iss_delay="0"
                        app:iss_placeholder="@android:color/darker_gray"
                        app:iss_error_image="@android:color/darker_gray"
                        app:iss_corner_radius="5"
                        app:iss_selected_dot="@drawable/default_selected_dot"
                        app:iss_unselected_dot="@drawable/default_unselected_dot"
                        app:iss_period="3000" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="5dp"
                app:cardBackgroundColor="@color/white"
                app:cardPreventCornerOverlap="true"
                app:cardUseCompatPadding="true"
                app:cardElevation="10dp"
                app:cardCornerRadius="10dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:padding="5dp"
                        android:text="Validasi Pesanan"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        android:textStyle="bold" />
                    <ImageView
                        android:id="@+id/img_mobil"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:adjustViewBounds="true"
                        android:scaleType="fitCenter"/>
                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/nama_mobil"
                            android:hint="@string/merek_model"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@color/white"
                            android:focusableInTouchMode="false"/>
                    </com.google.android.material.textfield.TextInputLayout>
                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/lama_sewa"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/lama_hari"
                            android:background="@color/white"
                            android:focusableInTouchMode="false"/>
                    </com.google.android.material.textfield.TextInputLayout>
                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/tanggal_boking"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:focusableInTouchMode="false"
                            android:background="@color/white"
                            android:hint="Tanggal booking" />
                    </com.google.android.material.textfield.TextInputLayout>
                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/discount"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="Diskon"
                            android:background="@color/white"
                            android:focusableInTouchMode="false"/>
                    </com.google.android.material.textfield.TextInputLayout>
                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/harga_total"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="Total harga"
                            android:background="@color/white"
                            android:focusableInTouchMode="false" />
                    </com.google.android.material.textfield.TextInputLayout>
                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/nama_penyewa"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="Nama Penyewa"
                            android:background="@color/white"
                            android:focusableInTouchMode="false" />
                    </com.google.android.material.textfield.TextInputLayout>
                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/nama_broker"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="Referensi"
                            android:background="@color/white"
                            android:focusableInTouchMode="false" />
                    </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="5dp"
                app:cardBackgroundColor="@color/white"
                app:cardPreventCornerOverlap="true"
                app:cardUseCompatPadding="true"
                app:cardElevation="10dp"
                app:cardCornerRadius="10dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:padding="5dp"
                        android:textSize="20sp"
                        android:text="Upload Bukti Pembayaran"
                        android:textColor="@color/black"
                        android:textStyle="bold" />
                    <ImageView
                        android:id="@+id/upload_transfer"
                        android:layout_width="match_parent"
                        android:layout_height="200dp"
                        android:src="@drawable/ic_upload"
                        android:layout_marginVertical="3dp"/>
                    <TextView
                        android:id="@+id/judul_kode"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:padding="5dp"
                        android:textColor="@color/black"
                        android:textStyle="bold" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/checkout"
                android:layout_alignParentBottom="true"
                android:padding="15dp"/>

        </LinearLayout>
    </ScrollView>

</RelativeLayout>